# deltatunix

./: .gitignore  CMakeLists.txt  LICENSE  README.md  resources.qrc  run.sh
release/: config.ini  config.kdl  deltatunix.1
sources/: config.cpp  config.hpp  font.cpp  font.hpp  formatscript.cpp  formatscript.hpp  main.cpp  mpris.cpp  mpris.hpp  tray.cpp  tray.hpp  tray_about_ui.hpp  window.cpp  window.hpp  window_rl.cpp
